drkiq-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drkiq
  labels:
    app: rails-app

spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: drkiq
        app: rails-app

    spec:
      containers:
      - env:
        - name: SECRET_TOKEN
          valueFrom:
            secretKeyRef:
              name: secret
              key: password
        - name: WORKER_PROCESSES
          value: "1"
        - name: LISTEN_ON
          value: 0.0.0.0:8000
        - name: DATABASE_URL
          value: postgresql://drkiq:yourpassword@postgres:5432/drkiq?encoding=utf8&pool=5&timeout=5000
        - name: CACHE_URL
          value: redis://redis:6379/0
        - name: JOB_WORKER_URL
          value: redis://redis:6379/0
        image: ehab123/drkiq
        name: drkiq
        ports:
        - containerPort: 8000
