sidekiq-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sidekiq
  labels:
    app: rails-app

spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: sidekiq
        app: rails-app
    spec:
      containers:
      - args:
        - bundle
        - exec
        - sidekiq
        - -C
        - config/sidekiq.yml
        image: ehab123/drkiq
        name: sidekiq
