drkiq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rails-app
  name: drkiq
spec:
  ports:
  - name: "8000"
    port: 8090
    targetPort: 8000
  selector:
    name: drkiq
    app: rails-app
