sidekiq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rails-app
  name: sidekiq
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    targetPort: 0
  selector:
    name: sidekiq
    app: rails-app
